----------
v6.0.3-git
----------

[jan] Include address groups in auto-completion list if address book is below
      AJAX lookup threshold.
[jan] Update French translation (Laurent Foucher
      <laurent.foucher@iut-tlse3.fr>).
[mms] Correctly remember form state when refreshing basic view compose page
      (Bug #11794).
[mms] Fix NOT criteria for custom header searches (Bug #11802).
[mms] Fix saving compose message to draft mailbox when session expires (Bug
      #11795).
[mms] Honor 'hide_when_unlimited' option for the quota driver (Bug #11782;
      Thomas Jarosch <thomas.jarosch@intra2net.com>).
[mms] Fix toggling other options in dynamic compose screen.


------
v6.0.2
------

[mms] Always add MDNSent flag when saving a draft/sent message.
[mms] Fix preview message text in basic view (Bug #11724).
[mms] Don't delete saved draft on session close.
[mms] Improved generation and parsing of mbox files.
[mms] Fix adding mailboxes with mull delimiters to the IMAP folder tree (Bug
      #11672).
[mms] Fix editing/sending templates in dynamic view.
[mms] Allow iCalendar events to be added to the calendar even if they are
      missing the required UID parameter (Bug #11669).
[mms] Fix displaying flag changes for messages in search mailboxes in dynamic
      view (Bug #11622).
[mms] Save sent-mail when composing in the smartmobile view (Bug #11670).
[mms] Don't try to save sent-mail to a non-existent sent-mail mailbox.
[mms] Fix displaying encrypted message in dynamic preview when correct
      passphrase is entered (Bug #11661).
[mms] Purge IMAP cache data when upgrading from IMP 5.


------
v6.0.1
------

[mms] Fix shift-clicking in dynamic mailbox view when navigating to other
      mailboxes (Bug #11520).
[mms] Disallow pasting non-text elements into the HTML editor (Bug #11650).
[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[mms] If persistent IMAP caching is disabled, use an in-memory cache for the
      current page load.