@@ -2,6 +2,8 @@
 v6.0.3-git
 ----------
 
+[mms] Ensure that polled mailboxes in dynamic view continue to show unseen
+      message count if its child status changes (Bug #11864).
 [jan] Include address groups in auto-completion list if address book is below
       AJAX lookup threshold.
 [jan] Update French translation (Laurent Foucher
